# OneGuyVsManyArseholes

./: .gitignore  CMakeLists.txt  __play_snapshot__.drsc  startup_scene.txt
export/res/: deferred_lighting.frag  deferred_lighting.vert  shader.frag  wiggle.vert
export/scenes/: Testbed.drsc
materials/: AK47.fbx-material-0.drmt  Gas_station.fbx-material-40.drmt  Gas_station.fbx-material-41.drmt  Gas_station.fbx-material-42.drmt  Gas_station.fbx-material-43.drmt  Gas_station_Props.fbx-material-24.drmt  Gas_station_Props.fbx-material-52.drmt  Gas_station_Props.fbx-material-53.drmt  Makarov.fbx-material-0.drmt
prefabs/: PistolAmmo.prefab  Zombie.prefab
res/: gbuffer.frag  gbuffer.vert  shader.frag  shader.vert  zombie.fbx
res/Shaders/: shader.vert  wiggle.frag
scenes/: Testbed.drsc
src/: AIBrain.c  AIBrain.h  AISpawn.c  AISpawn.h  AISteering.c  AISteering.h  Bullet.c  Bullet.h  Collisions.c  Collisions.h  Enemy.c  Enemy.h  GameAudio.c  GameAudio.h  GameConfig.h  Gun.c  Gun.h  Health.c  Health.h  Player.c  Player.h  game.cpp  game.h  main.cpp
